samples/_failures_safe/1761361529_926001_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57d98177.c: In function ‘main’:
./samples/SAFE/__tmp_57d98177.c:184:9: error: expected declaration or statement at end of input
  184 |         event_t event = get_user_event();
      |         ^~~~~~~
./samples/SAFE/__tmp_57d98177.c:184:9: error: expected declaration or statement at end of input
